--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-python-telegram-bot==20.7
+python-telegram-bot>=20.0
 langchain==0.1.11
-openai==1.23.0
+openai>=1.0.0
 sqlalchemy==2.0.27
 psycopg2-binary==2.9.9
-python-dotenv==1.0.1
+python-dotenv>=0.19.0
 langchain-openai==0.0.8
 langchain-core==0.1.30
 langchain-community==0.0.29
