--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 python-telegram-bot>=20.0
-langchain==0.1.11
-openai>=1.0.0
+langchain==0.1.20
+openai>=1.5.0,<2.0.0
 sqlalchemy==2.0.27
 psycopg2-binary==2.9.9
 python-dotenv>=0.19.0
-langchain-openai==0.0.8
-langchain-core==0.1.30
-langchain-community==0.0.29
+langchain-openai==0.1.7
+langchain-core==0.1.52
+langchain-community==0.0.38
 pytest==7.4.4
 black==24.1.1
 flake8==7.0.0
